Compilador/Gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LINEANUEVA

Grammar

Rule 0     S' -> init
Rule 1     init -> ls_instr
Rule 2     init -> empty
Rule 3     empty -> <empty>
Rule 4     ls_instr -> ls_instr instr
Rule 5     ls_instr -> instr
Rule 6     instr -> instruccion
Rule 7     instr -> funcion_instr LLAVEC
Rule 8     PARAMETROS -> PARAMETROS COMA PARAMETRO
Rule 9     PARAMETROS -> PARAMETRO
Rule 10    PARAMETRO -> expresion
Rule 11    PARAMETROSTIPO -> PARAMETROSTIPO COMA PARAMETROTIPO
Rule 12    PARAMETROSTIPO -> PARAMETROTIPO
Rule 13    PARAMETROTIPO -> ID DOSPTS TIPO
Rule 14    PARAMETROTIPO -> ID DOSPTS ID
Rule 15    PARAMETROTIPO -> ID
Rule 16    instrucciones -> instrucciones instruccion
Rule 17    instrucciones -> instruccion
Rule 18    instruccion -> imprimir_instr
Rule 19    instruccion -> declaracion_instr
Rule 20    instruccion -> llamada_instr
Rule 21    instruccion -> struct_instr
Rule 22    instruccion -> if_instr
Rule 23    imprimir_instr -> RPRINT PARA PARAMETROS PARC
Rule 24    declaracion_instr -> ID IGUAL expresion
Rule 25    declaracion_instr -> ID DOSPTS TIPO IGUAL expresion
Rule 26    declaracion_instr -> ID ACCESOLISTA IGUAL expresion
Rule 27    declaracion_instr -> GETSTRUCTS IGUAL expresion
Rule 28    funcion_instr -> RDEF ID PARA PARC DOSPTS instrucciones
Rule 29    funcion_instr -> RDEF ID PARA PARAMETROSTIPO PARC DOSPTS instrucciones
Rule 30    llamada_instr -> ID PARA PARC
Rule 31    llamada_instr -> ID PARA PARAMETROS PARC
Rule 32    llamada_expre -> ID PARA PARC
Rule 33    llamada_expre -> ID PARA PARAMETROS PARC
Rule 34    LISTA -> CORCHA PARAMETROS CORCHC
Rule 35    ACCESOLISTA -> ACCESOLISTA ITEMLISTA
Rule 36    ACCESOLISTA -> ITEMLISTA
Rule 37    ITEMLISTA -> CORCHA expresion CORCHC
Rule 38    struct_instr -> RMUTABLE RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
Rule 39    struct_instr -> RMUTABLE RSTRUCT ID LLAVEC
Rule 40    struct_instr -> RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
Rule 41    struct_instr -> RSTRUCT ID LLAVEC
Rule 42    ATRIBUTOSSTRUCT -> ATRIBUTOSSTRUCT ATRIBSTRUCT PUNTOCOMA
Rule 43    ATRIBUTOSSTRUCT -> ATRIBSTRUCT PUNTOCOMA
Rule 44    ATRIBSTRUCT -> ID DOSPTS TIPO
Rule 45    ATRIBSTRUCT -> ID DOSPTS ID
Rule 46    ATRIBSTRUCT -> ID
Rule 47    GETSTRUCTS -> GETSTRUCTS PUNTO GETSTRUCT
Rule 48    GETSTRUCTS -> GETSTRUCT
Rule 49    GETSTRUCT -> ID
Rule 50    if_instr -> RIF expresion DOSPTS instrucciones LLAVEC
Rule 51    if_instr -> RIF expresion DOSPTS instrucciones LLAVEC RELSE DOSPTS instrucciones LLAVEC
Rule 52    if_instr -> RIF expresion DOSPTS instrucciones LLAVEC lista_elif
Rule 53    lista_elif -> lista_elif elif_inst
Rule 54    lista_elif -> elif_inst
Rule 55    elif_inst -> RELIF expresion DOSPTS instrucciones LLAVEC
Rule 56    elif_inst -> RELIF expresion DOSPTS instrucciones LLAVEC RELSE DOSPTS instrucciones LLAVEC
Rule 57    elif_inst -> RELIF expresion DOSPTS instrucciones LLAVEC lista_elif
Rule 58    TIPO -> RINT
Rule 59    TIPO -> RFLOAT
Rule 60    TIPO -> RBOOLEAN
Rule 61    TIPO -> RSTRING
Rule 62    TIPO -> ID
Rule 63    TIPO -> RLIST
Rule 64    expresion -> expresion MAS expresion
Rule 65    expresion -> expresion MENOS expresion
Rule 66    expresion -> expresion MULTIPLICACION expresion
Rule 67    expresion -> expresion DIVISION expresion
Rule 68    expresion -> expresion POTENCIA expresion
Rule 69    expresion -> expresion MODULO expresion
Rule 70    expresion -> expresion PUNTO expresion
Rule 71    expresion -> expresion MAYORQUE expresion
Rule 72    expresion -> expresion MENORQUE expresion
Rule 73    expresion -> expresion MAYORIGUAL expresion
Rule 74    expresion -> expresion MENORIGUAL expresion
Rule 75    expresion -> expresion IGUALIGUAL expresion
Rule 76    expresion -> expresion DIFERENTE expresion
Rule 77    expresion -> expresion RAND expresion
Rule 78    expresion -> expresion ROR expresion
Rule 79    expresion -> RNOT expresion
Rule 80    expresion -> MENOS expresion
Rule 81    expresion -> PARA expresion PARC
Rule 82    expresion -> ENTERO
Rule 83    expresion -> DECIMAL
Rule 84    expresion -> CADENA
Rule 85    expresion -> ID
Rule 86    expresion -> RTRUE
Rule 87    expresion -> RFALSE
Rule 88    expresion -> RNULO
Rule 89    expresion -> LISTA
Rule 90    expresion -> ID ACCESOLISTA
Rule 91    expresion -> llamada_expre

Terminals, with rules where they appear

CADENA               : 84
COMA                 : 8 11
CORCHA               : 34 37
CORCHC               : 34 37
DECIMAL              : 83
DIFERENTE            : 76
DIVISION             : 67
DOSPTS               : 13 14 25 28 29 44 45 50 51 51 52 55 56 56 57
ENTERO               : 82
ID                   : 13 14 14 15 24 25 26 28 29 30 31 32 33 38 39 40 41 44 45 45 46 49 62 85 90
IGUAL                : 24 25 26 27
IGUALIGUAL           : 75
LINEANUEVA           : 
LLAVEC               : 7 38 39 40 41 50 51 51 52 55 56 56 57
MAS                  : 64
MAYORIGUAL           : 73
MAYORQUE             : 71
MENORIGUAL           : 74
MENORQUE             : 72
MENOS                : 65 80
MODULO               : 69
MULTIPLICACION       : 66
PARA                 : 23 28 29 30 31 32 33 81
PARC                 : 23 28 29 30 31 32 33 81
POTENCIA             : 68
PUNTO                : 47 70
PUNTOCOMA            : 42 43
RAND                 : 77
RBOOLEAN             : 60
RDEF                 : 28 29
RELIF                : 55 56 57
RELSE                : 51 56
RFALSE               : 87
RFLOAT               : 59
RIF                  : 50 51 52
RINT                 : 58
RLIST                : 63
RMUTABLE             : 38 39
RNOT                 : 79
RNULO                : 88
ROR                  : 78
RPRINT               : 23
RSTRING              : 61
RSTRUCT              : 38 39 40 41
RTRUE                : 86
error                : 

Nonterminals, with rules where they appear

ACCESOLISTA          : 26 35 90
ATRIBSTRUCT          : 42 43
ATRIBUTOSSTRUCT      : 38 40 42
GETSTRUCT            : 47 48
GETSTRUCTS           : 27 47
ITEMLISTA            : 35 36
LISTA                : 89
PARAMETRO            : 8 9
PARAMETROS           : 8 23 31 33 34
PARAMETROSTIPO       : 11 29
PARAMETROTIPO        : 11 12
TIPO                 : 13 25 44
declaracion_instr    : 19
elif_inst            : 53 54
empty                : 2
expresion            : 10 24 25 26 27 37 50 51 52 55 56 57 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 80 81
funcion_instr        : 7
if_instr             : 22
imprimir_instr       : 18
init                 : 0
instr                : 4 5
instruccion          : 6 16 17
instrucciones        : 16 28 29 50 51 51 52 55 56 56 57
lista_elif           : 52 53 57
llamada_expre        : 91
llamada_instr        : 20
ls_instr             : 1 4
struct_instr         : 21

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . ls_instr
    (2) init -> . empty
    (4) ls_instr -> . ls_instr instr
    (5) ls_instr -> . instr
    (3) empty -> .
    (6) instr -> . instruccion
    (7) instr -> . funcion_instr LLAVEC
    (18) instruccion -> . imprimir_instr
    (19) instruccion -> . declaracion_instr
    (20) instruccion -> . llamada_instr
    (21) instruccion -> . struct_instr
    (22) instruccion -> . if_instr
    (28) funcion_instr -> . RDEF ID PARA PARC DOSPTS instrucciones
    (29) funcion_instr -> . RDEF ID PARA PARAMETROSTIPO PARC DOSPTS instrucciones
    (23) imprimir_instr -> . RPRINT PARA PARAMETROS PARC
    (24) declaracion_instr -> . ID IGUAL expresion
    (25) declaracion_instr -> . ID DOSPTS TIPO IGUAL expresion
    (26) declaracion_instr -> . ID ACCESOLISTA IGUAL expresion
    (27) declaracion_instr -> . GETSTRUCTS IGUAL expresion
    (30) llamada_instr -> . ID PARA PARC
    (31) llamada_instr -> . ID PARA PARAMETROS PARC
    (38) struct_instr -> . RMUTABLE RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
    (39) struct_instr -> . RMUTABLE RSTRUCT ID LLAVEC
    (40) struct_instr -> . RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
    (41) struct_instr -> . RSTRUCT ID LLAVEC
    (50) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC
    (51) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC RELSE DOSPTS instrucciones LLAVEC
    (52) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC lista_elif
    (47) GETSTRUCTS -> . GETSTRUCTS PUNTO GETSTRUCT
    (48) GETSTRUCTS -> . GETSTRUCT
    (49) GETSTRUCT -> . ID

    $end            reduce using rule 3 (empty -> .)
    RDEF            shift and go to state 12
    RPRINT          shift and go to state 14
    ID              shift and go to state 13
    RMUTABLE        shift and go to state 16
    RSTRUCT         shift and go to state 17
    RIF             shift and go to state 18

    init                           shift and go to state 1
    ls_instr                       shift and go to state 2
    empty                          shift and go to state 3
    instr                          shift and go to state 4
    instruccion                    shift and go to state 5
    funcion_instr                  shift and go to state 6
    imprimir_instr                 shift and go to state 7
    declaracion_instr              shift and go to state 8
    llamada_instr                  shift and go to state 9
    struct_instr                   shift and go to state 10
    if_instr                       shift and go to state 11
    GETSTRUCTS                     shift and go to state 15
    GETSTRUCT                      shift and go to state 19

state 1

    (0) S' -> init .



state 2

    (1) init -> ls_instr .
    (4) ls_instr -> ls_instr . instr
    (6) instr -> . instruccion
    (7) instr -> . funcion_instr LLAVEC
    (18) instruccion -> . imprimir_instr
    (19) instruccion -> . declaracion_instr
    (20) instruccion -> . llamada_instr
    (21) instruccion -> . struct_instr
    (22) instruccion -> . if_instr
    (28) funcion_instr -> . RDEF ID PARA PARC DOSPTS instrucciones
    (29) funcion_instr -> . RDEF ID PARA PARAMETROSTIPO PARC DOSPTS instrucciones
    (23) imprimir_instr -> . RPRINT PARA PARAMETROS PARC
    (24) declaracion_instr -> . ID IGUAL expresion
    (25) declaracion_instr -> . ID DOSPTS TIPO IGUAL expresion
    (26) declaracion_instr -> . ID ACCESOLISTA IGUAL expresion
    (27) declaracion_instr -> . GETSTRUCTS IGUAL expresion
    (30) llamada_instr -> . ID PARA PARC
    (31) llamada_instr -> . ID PARA PARAMETROS PARC
    (38) struct_instr -> . RMUTABLE RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
    (39) struct_instr -> . RMUTABLE RSTRUCT ID LLAVEC
    (40) struct_instr -> . RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
    (41) struct_instr -> . RSTRUCT ID LLAVEC
    (50) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC
    (51) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC RELSE DOSPTS instrucciones LLAVEC
    (52) if_instr -> . RIF expresion DOSPTS instrucciones LLAVEC lista_elif
    (47) GETSTRUCTS -> . GETSTRUCTS PUNTO GETSTRUCT
    (48) GETSTRUCTS -> . GETSTRUCT
    (49) GETSTRUCT -> . ID

    $end            reduce using rule 1 (init -> ls_instr .)
    RDEF            shift and go to state 12
    RPRINT          shift and go to state 14
    ID              shift and go to state 13
    RMUTABLE        shift and go to state 16
    RSTRUCT         shift and go to state 17
    RIF             shift and go to state 18

    instr                          shift and go to state 20
    instruccion                    shift and go to state 5
    funcion_instr                  shift and go to state 6
    imprimir_instr                 shift and go to state 7
    declaracion_instr              shift and go to state 8
    llamada_instr                  shift and go to state 9
    struct_instr                   shift and go to state 10
    if_instr                       shift and go to state 11
    GETSTRUCTS                     shift and go to state 15
    GETSTRUCT                      shift and go to state 19

state 3

    (2) init -> empty .

    $end            reduce using rule 2 (init -> empty .)


state 4

    (5) ls_instr -> instr .

    RDEF            reduce using rule 5 (ls_instr -> instr .)
    RPRINT          reduce using rule 5 (ls_instr -> instr .)
    ID              reduce using rule 5 (ls_instr -> instr .)
    RMUTABLE        reduce using rule 5 (ls_instr -> instr .)
    RSTRUCT         reduce using rule 5 (ls_instr -> instr .)
    RIF             reduce using rule 5 (ls_instr -> instr .)
    $end            reduce using rule 5 (ls_instr -> instr .)


state 5

    (6) instr -> instruccion .

    RDEF            reduce using rule 6 (instr -> instruccion .)
    RPRINT          reduce using rule 6 (instr -> instruccion .)
    ID              reduce using rule 6 (instr -> instruccion .)
    RMUTABLE        reduce using rule 6 (instr -> instruccion .)
    RSTRUCT         reduce using rule 6 (instr -> instruccion .)
    RIF             reduce using rule 6 (instr -> instruccion .)
    $end            reduce using rule 6 (instr -> instruccion .)


state 6

    (7) instr -> funcion_instr . LLAVEC

    LLAVEC          shift and go to state 21


state 7

    (18) instruccion -> imprimir_instr .

    RDEF            reduce using rule 18 (instruccion -> imprimir_instr .)
    RPRINT          reduce using rule 18 (instruccion -> imprimir_instr .)
    ID              reduce using rule 18 (instruccion -> imprimir_instr .)
    RMUTABLE        reduce using rule 18 (instruccion -> imprimir_instr .)
    RSTRUCT         reduce using rule 18 (instruccion -> imprimir_instr .)
    RIF             reduce using rule 18 (instruccion -> imprimir_instr .)
    $end            reduce using rule 18 (instruccion -> imprimir_instr .)
    LLAVEC          reduce using rule 18 (instruccion -> imprimir_instr .)


state 8

    (19) instruccion -> declaracion_instr .

    RDEF            reduce using rule 19 (instruccion -> declaracion_instr .)
    RPRINT          reduce using rule 19 (instruccion -> declaracion_instr .)
    ID              reduce using rule 19 (instruccion -> declaracion_instr .)
    RMUTABLE        reduce using rule 19 (instruccion -> declaracion_instr .)
    RSTRUCT         reduce using rule 19 (instruccion -> declaracion_instr .)
    RIF             reduce using rule 19 (instruccion -> declaracion_instr .)
    $end            reduce using rule 19 (instruccion -> declaracion_instr .)
    LLAVEC          reduce using rule 19 (instruccion -> declaracion_instr .)


state 9

    (20) instruccion -> llamada_instr .

    RDEF            reduce using rule 20 (instruccion -> llamada_instr .)
    RPRINT          reduce using rule 20 (instruccion -> llamada_instr .)
    ID              reduce using rule 20 (instruccion -> llamada_instr .)
    RMUTABLE        reduce using rule 20 (instruccion -> llamada_instr .)
    RSTRUCT         reduce using rule 20 (instruccion -> llamada_instr .)
    RIF             reduce using rule 20 (instruccion -> llamada_instr .)
    $end            reduce using rule 20 (instruccion -> llamada_instr .)
    LLAVEC          reduce using rule 20 (instruccion -> llamada_instr .)


state 10

    (21) instruccion -> struct_instr .

    RDEF            reduce using rule 21 (instruccion -> struct_instr .)
    RPRINT          reduce using rule 21 (instruccion -> struct_instr .)
    ID              reduce using rule 21 (instruccion -> struct_instr .)
    RMUTABLE        reduce using rule 21 (instruccion -> struct_instr .)
    RSTRUCT         reduce using rule 21 (instruccion -> struct_instr .)
    RIF             reduce using rule 21 (instruccion -> struct_instr .)
    $end            reduce using rule 21 (instruccion -> struct_instr .)
    LLAVEC          reduce using rule 21 (instruccion -> struct_instr .)


state 11

    (22) instruccion -> if_instr .

    RDEF            reduce using rule 22 (instruccion -> if_instr .)
    RPRINT          reduce using rule 22 (instruccion -> if_instr .)
    ID              reduce using rule 22 (instruccion -> if_instr .)
    RMUTABLE        reduce using rule 22 (instruccion -> if_instr .)
    RSTRUCT         reduce using rule 22 (instruccion -> if_instr .)
    RIF             reduce using rule 22 (instruccion -> if_instr .)
    $end            reduce using rule 22 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 22 (instruccion -> if_instr .)


state 12

    (28) funcion_instr -> RDEF . ID PARA PARC DOSPTS instrucciones
    (29) funcion_instr -> RDEF . ID PARA PARAMETROSTIPO PARC DOSPTS instrucciones

    ID              shift and go to state 22


state 13

    (24) declaracion_instr -> ID . IGUAL expresion
    (25) declaracion_instr -> ID . DOSPTS TIPO IGUAL expresion
    (26) declaracion_instr -> ID . ACCESOLISTA IGUAL expresion
    (30) llamada_instr -> ID . PARA PARC
    (31) llamada_instr -> ID . PARA PARAMETROS PARC
    (49) GETSTRUCT -> ID .
    (35) ACCESOLISTA -> . ACCESOLISTA ITEMLISTA
    (36) ACCESOLISTA -> . ITEMLISTA
    (37) ITEMLISTA -> . CORCHA expresion CORCHC

  ! shift/reduce conflict for IGUAL resolved as shift
    IGUAL           shift and go to state 23
    DOSPTS          shift and go to state 24
    PARA            shift and go to state 26
    PUNTO           reduce using rule 49 (GETSTRUCT -> ID .)
    CORCHA          shift and go to state 28

  ! IGUAL           [ reduce using rule 49 (GETSTRUCT -> ID .) ]

    ACCESOLISTA                    shift and go to state 25
    ITEMLISTA                      shift and go to state 27

state 14

    (23) imprimir_instr -> RPRINT . PARA PARAMETROS PARC

    PARA            shift and go to state 29


state 15

    (27) declaracion_instr -> GETSTRUCTS . IGUAL expresion
    (47) GETSTRUCTS -> GETSTRUCTS . PUNTO GETSTRUCT

    IGUAL           shift and go to state 30
    PUNTO           shift and go to state 31


state 16

    (38) struct_instr -> RMUTABLE . RSTRUCT ID ATRIBUTOSSTRUCT LLAVEC
    (39) struct_instr -> RMUTABLE . RSTRUCT ID LLAVEC

    RSTRUCT         shift and go to state 32


state 17

    (40) struct_instr -> RSTRUCT . ID ATRIBUTOSSTRUCT LLAVEC
    (41) struct_instr -> RSTRUCT . ID LLAVEC

    ID              shift and go to state 33


state 18

    (50) if_instr -> RIF . expresion DOSPTS instrucciones LLAVEC
    (51) if_instr -> RIF . expresion DOSPTS instrucciones LLAVEC RELSE DOSPTS instrucciones LLAVEC
    (52) if_instr -> RIF . expresion DOSPTS instrucciones LLAVEC lista_elif
    (64) expresion -> . expresion MAS expresion
    (65) expresion -> . expresion MENOS expresion
    (66) expresion -> . expresion MULTIPLICACION expresion
    (67) expresion -> . expresion DIVISION expresion
    (68) expresion -> . expresion POTENCIA expresion
    (69) expresion -> . expresion MODULO expresion
    (70) expresion -> . expresion PUNTO expresion
    (71) expresion -> . expresion MAYORQUE expresion
    (72) expresion -> . expresion MENORQUE expresion
    (73) expresion -> . expresion MAYORIGUAL expresion
    (74) expresion -> . expresion MENORIGUAL expresion
    (75) expresion -> . expresion IGUALIGUAL expresion
    (76) expresion -> . expresion DIFERENTE expresion
    (77) expresion -> . expresion RAND expresion
    (78) expresion -> . expresion ROR expresion
    (79) expresion -> . RNOT expresion
    (80) expresion -> . MENOS expresion
    (81) expresion -> . PARA expresion PARC
    (82) expresion -> . ENTERO
    (83) expresion -> . DECIMAL
    (84) expresion -> . CADENA
    (85) expresion -> . ID
    (86) expresion -> . RTRUE
    (87) expresion -> . RFALSE
    (88) expresion -> . RNULO
    (89) expresion -> . LISTA
    (90) expresion -> . ID ACCESOLISTA
    (91) expresion -> . llamada_expre
    (34) LISTA -> . CORCHA PARAMETROS CORCHC
    (32) llamada_expre -> . ID PARA PARC
    (33) llamada_expre -> . ID PARA PARAMETROS PARC

    RNOT            shift and go to state 36
    MENOS           shift and go to state 35
    PARA            shift and go to state 37
    ENTERO          shift and go to state 38
    DECIMAL         shift and go to state 39
    CADENA          shift and go to state 40
    ID              shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    RNULO           shift and go to state 44
    CORCHA          shift and go to state 47

    expresion                      shift and go to state 34
    LISTA                          shift and go to state 45
    llamada_expre                  shift and go to state 46

state 19

    (48) GETSTRUCTS -> GETSTRUCT .

    IGUAL           reduce using rule 48 (GETSTRUCTS -> GETSTRUCT .)
    PUNTO           reduce using rule 48 (GETSTRUCTS -> GETSTRUCT .)


state 20

    (4) ls_instr -> ls_instr instr .

    RDEF            reduce using rule 4 (ls_instr -> ls_instr instr .)
    RPRINT          reduce using rule 4 (ls_instr -> ls_instr instr .)
    ID              reduce using rule 4 (ls_instr -> ls_instr instr .)
    RMUTABLE        reduce using rule 4 (ls_instr -> ls_instr instr .)
    RSTRUCT         reduce using rule 4 (ls_instr -> ls_instr instr .)
    RIF             reduce using rule 4 (ls_instr -> ls_instr instr .)
    $end            reduce using rule 4 (ls_instr -> ls_instr instr .)


state 21

    (7) instr -> funcion_instr LLAVEC .

    RDEF            reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    RPRINT          reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    ID              reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    RMUTABLE        reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    RSTRUCT         reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    RIF             reduce using rule 7 (instr -> funcion_instr LLAVEC .)
    $end            reduce using rule 7 (instr -> funcion_instr LLAVEC .)


state 22

    (28) funcion_instr -> RDEF ID . PARA PARC DOSPTS instrucciones
    (29) funcion_instr -> RDEF ID . PARA PARAMETROSTIPO PARC DOSPTS instrucciones

    PARA            shift and go to state 48


state 23

    (24) declaracion_instr -> ID IGUAL . expresion
    (64) expresion -> . expresion MAS expresion
    (65) expresion -> . expresion MENOS expresion
    (66) expresion -> . expresion MULTIPLICACION expresion
    (67) expresion -> . expresion DIVISION expresion
    (68) expresion -> . expresion POTENCIA expresion
    (69) expresion -> . expresion MODULO expresion
    (70) expresion -> . expresion PUNTO expresion
    (71) expresion -> . expresion MAYORQUE expresion
    (72) expresion -> . expresion MENORQUE expresion
    (73) expresion -> . expresion MAYORIGUAL expresion
    (74) expresion -> . expresion MENORIGUAL expresion
    (75) expresion -> . expresion IGUALIGUAL expresion
    (76) expresion -> . expresion DIFERENTE expresion
    (77) expresion -> . expresion RAND expresion
    (78) expresion -> . expresion ROR expresion
    (79) expresion -> . RNOT expresion
    (80) expresion -> . MENOS expresion
    (81) expresion -> . PARA expresion PARC
    (82) expresion -> . ENTERO
    (83) expresion -> . DECIMAL
    (84) expresion -> . CADENA
    (85) expresion -> . ID
    (86) expresion -> . RTRUE
    (87) expresion -> . RFALSE
    (88) expresion -> . RNULO
    (89) expresion -> . LISTA
    (90) expresion -> . ID ACCESOLISTA
    (91) expresion -> . llamada_expre
    (34) LISTA -> . CORCHA PARAMETROS CORCHC
    (32) llamada_expre -> . ID PARA PARC
    (33) llamada_expre -> . ID PARA PARAMETROS PARC

    RNOT            shift and go to state 36
    MENOS           shift and go to state 35
    PARA            shift and go to state 37
    ENTERO          shift and go to state 38
    DECIMAL         shift and go to state 39
    CADENA          shift and go to state 40
    ID              shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    RNULO           shift and go to state 44
    CORCHA          shift and go to state 47

    expresion                      shift and go to state 49
    LISTA                          shift and go to state 45
    llamada_expre                  shift and go to state 46

state 24

    (25) declaracion_instr -> ID DOSPTS . TIPO IGUAL expresion
    (58) TIPO -> . RINT
    (59) TIPO -> . RFLOAT
    (60) TIPO -> . RBOOLEAN
    (61) TIPO -> . RSTRING
    (62) TIPO -> . ID
    (63) TIPO -> . RLIST

    RINT            shift and go to state 52
    RFLOAT          shift and go to state 53
    RBOOLEAN        shift and go to state 54
    RSTRING         shift and go to state 55
    ID              shift and go to state 50
    RLIST           shift and go to state 56

    TIPO                           shift and go to state 51

state 25

    (26) declaracion_instr -> ID ACCESOLISTA . IGUAL expresion
    (35) ACCESOLISTA -> ACCESOLISTA . ITEMLISTA
    (37) ITEMLISTA -> . CORCHA expresion CORCHC

    IGUAL           shift and go to state 57
    CORCHA          shift and go to state 28

    ITEMLISTA                      shift and go to state 58

state 26

    (30) llamada_instr -> ID PARA . PARC
    (31) llamada_instr -> ID PARA . PARAMETROS PARC
    (8) PARAMETROS -> . PARAMETROS COMA PARAMETRO
    (9) PARAMETROS -> . PARAMETRO
    (10) PARAMETRO -> . expresion
    (64) expresion -> . expresion MAS expresion
    (65) expresion -> . expresion MENOS expresion
    (66) expresion -> . expresion MULTIPLICACION expresion
    (67) expresion -> . expresion DIVISION expresion
    (68) expresion -> . expresion POTENCIA expresion
    (69) expresion -> . expresion MODULO expresion
    (70) expresion -> . expresion PUNTO expresion
    (71) expresion -> . expresion MAYORQUE expresion
    (72) expresion -> . expresion MENORQUE expresion
    (73) expresion -> . expresion MAYORIGUAL expresion
    (74) expresion -> . expresion MENORIGUAL expresion
    (75) expresion -> . expresion IGUALIGUAL expresion
    (76) expresion -> . expresion DIFERENTE expresion
    (77) expresion -> . expresion RAND expresion
    (78) expresion -> . expresion ROR expresion
    (79) expresion -> . RNOT expresion
    (80) expresion -> . MENOS expresion
    (81) expresion -> . PARA expresion PARC
    (82) expresion -> . ENTERO
    (83) expresion -> . DECIMAL
    (84) expresion -> . CADENA
    (85) expresion -> . ID
    (86) expresion -> . RTRUE
    (87) expresion -> . RFALSE
    (88) expresion -> . RNULO
    (89) expresion -> . LISTA
    (90) expresion -> . ID ACCESOLISTA
    (91) expresion -> . llamada_expre
    (34) LISTA -> . CORCHA PARAMETROS CORCHC
    (32) llamada_expre -> . ID PARA PARC
    (33) llamada_expre -> . ID PARA PARAMETROS PARC

    PARC            shift and go to state 59
    RNOT            shift and go to state 36
    MENOS           shift and go to state 35
    PARA            shift and go to state 37
    ENTERO          shift and go to state 38
    DECIMAL         shift and go to state 39
    CADENA          shift and go to state 40
    ID              shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    RNULO           shift and go to state 44
    CORCHA          shift and go to state 47

    PARAMETROS                     shift and go to state 60
    PARAMETRO                      shift and go to state 61
    expresion                      shift and go to state 62
    LISTA                          shift and go to state 45
    llamada_expre                  shift and go to state 46

state 27

    (36) ACCESOLISTA -> ITEMLISTA .

    IGUAL           reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    CORCHA          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    DOSPTS          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MAS             reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MENOS           reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MULTIPLICACION  reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    DIVISION        reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    POTENCIA        reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MODULO          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    PUNTO           reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MAYORQUE        reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MENORQUE        reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MAYORIGUAL      reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    MENORIGUAL      reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    IGUALIGUAL      reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    DIFERENTE       reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RAND            reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    ROR             reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RDEF            reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RPRINT          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    ID              reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RMUTABLE        reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RSTRUCT         reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    RIF             reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    $end            reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    LLAVEC          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    PARC            reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    COMA            reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)
    CORCHC          reduce using rule 36 (ACCESOLISTA -> ITEMLISTA .)


state 28

    (37) ITEMLISTA -> CORCHA . expresion CORCHC
    (64) expresion -> . expresion MAS expresion
    (65) expresion -> . expresion MENOS expresion
    (66) expresion -> . expresion MULTIPLICACION expresion
    (67) expresion -> . expresion DIVISION expresion
    (68) expresion -> . expresion POTENCIA expresion
    (69) expresion -> . expresion MODULO expresion
    (70) expresion -> . expresion PUNTO expresion
    (71) expresion -> . expresion MAYORQUE expresion
    (72) expresion -> . expresion MENORQUE expresion
    (73) expresion -> . expresion MAYORIGUAL expresion
    (74) expresion -> . expresion MENORIGUAL expresion
    (75) expresion -> . expresion IGUALIGUAL expresion
    (76) expresion -> . expresion DIFERENTE expresion
    (77) expresion -> . expresion RAND expresion
    (78) expresion -> . expresion ROR expresion
    (79) expresion -> . RNOT expresion
    (80) expresion -> . MENOS expresion
    (81) expresion -> . PARA expresion PARC
    (82) expresion -> . ENTERO
    (83) expresion -> . DECIMAL
    (84) expresion -> . CADENA
    (85) expresion -> . ID
    (86) expresion -> . RTRUE
    (87) expresion -> . RFALSE
    (88) expresion -> . RNULO
    (89) expresion -> . LISTA
    (90) expresion -> . ID ACCESOLISTA
    (91) expresion -> . llamada_expre
    (34) LISTA -> . CORCHA PARAMETROS CORCHC
    (32) llamada_expre -> . ID PARA PARC
    (33) llamada_expre -> . ID PARA PARAMETROS PARC

    RNOT            shift and go to state 36
    MENOS           shift and go to state 35
    PARA            shift and go to state 37
    ENTERO          shift and go to state 38
    DECIMAL         shift and go to state 39
    CADENA          shift and go to state 40
    ID              shift and go to state 41
    RTRUE           shift and go to state 42
    RFALSE          shift and go to state 43
    RNULO           shift and go to state 44
    CORCHA          shift and go to state 47

    expresion                      shift and go to state 63
    LISTA                          shift and go to state 45
    llamada_expre                  shift and go to state 46

state 29
